# apexorm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
apexorm/: __init__.py  testing.py
apexorm/connection/: __init__.py
apexorm/models/: __init__.py  fields.py  m2m.py  manager.py  queryset.py  relations.py  validators.py
apexorm/models/storage/: base.py  local.py  utils.py
test/: conftest.py  test_crud_and_queryset.py  test_eager_loading.py  test_json_datetime_fields.py  test_m2m_manager_extras.py  test_manager_proxies_and_exists.py  test_queryset_index_slice.py  test_relations.py  test_select_related_errors_and_nested.py  test_storage_and_utils.py
