[project]
name = "apexorm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.9.1",
    "sqlparse>=0.5.0",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
argon2 = ["argon2-cffi>=23.1.0"]
bcrypt = ["bcrypt>=4.1.1"]