[project]
name = "apexorm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.9.1",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.44",
    "sqlparse>=0.5.0",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
argon2 = ["argon2-cffi>=23.1.0"]
bcrypt = ["bcrypt>=4.1.1"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"